[tool.poetry]
name = "open3d-tutorial"
version = "0.1.0"
description = ""
authors = ["r-matsuzaka <matsuzakaryo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
open3d = "^0.15.2"
jupyterlab = "^3.3.4"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
